--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -37,6 +37,7 @@ import Layout from '@layouts/Layout.astro'
       <ol>
         <li>Piráti z Karybníku</li>
         <li>Scientists</li>
+        <li>Peaky Fookin Blinders</li>
       </ol>
   </main>
 </Layout>
