--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -26,7 +26,7 @@ import Layout from '@layouts/Layout.astro'
 
       <div class="anchor" id="registrace"></div>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfB9sjclVedDIA8W1qepB8VqSjS5P0T1XfGd_IlvlpSzFK8_w/viewform?embedded=true" width="100%" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
-      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 účastníků přihlášených online obdrží na baru welcome drink v ceně startovného.</b></p>
+      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 účastníků přihlášených online obdrží na baru welcome drink! 🍸</b></p>
       <img src="/img/qrworms.png" alt="QR kód pro platbu startovného" width="200" style="display: block; margin: auto;"/>
 
       <div class="anchor" id="kontakt"></div>
