--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -38,6 +38,8 @@ import Layout from '@layouts/Layout.astro'
         <li>Piráti z Karybníku</li>
         <li>Scientists</li>
         <li>Peaky Fookin Blinders</li>
+        <li>Keine CHance!</li>
+        <li>Vozová hradba</li>
       </ol>
   </main>
 </Layout>
