--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -40,6 +40,7 @@ import Layout from '@layouts/Layout.astro'
         <li>Peaky Fookin Blinders</li>
         <li>Keine CHance!</li>
         <li>Vozová hradba</li>
+        <li>Suits</li>
       </ol>
   </main>
 </Layout>
