--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -41,6 +41,7 @@ import Layout from '@layouts/Layout.astro'
         <li>Keine CHance!</li>
         <li>Vozová hradba</li>
         <li>Suits</li>
+        <li>Log Horizon</li>
       </ol>
   </main>
 </Layout>
